# integration-quibble

./: .dockerignore  .gitignore  .gitreview  CHANGELOG.rst  Dockerfile  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  RELEASING.rst  doc-requirements.txt  pyproject.toml  quibble.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
doc/: Makefile  make.bat
doc/source/: build-reproduction.rst  conf.py  index.rst  license.rst  usage.rst
docker/: Dockerfile.dev  README.md  supervisord.conf
docker/apache/: 000-default.conf  apache2.conf  envvars
docker/php-fpm/: php-fpm.conf
quibble/: __init__.py  backend.py  cache.py  cmd.py  commands.py  gitchangedinhead.py  pg_virtualenv_hook.py  phpunit_split.py  test.py  util.py  zuul.py
quibble/mediawiki/: __init__.py  local_settings.php  local_settings.php.tpl  local_settings_overrides.php  maintenance.py  registry.py
quibble/mediawiki.d/: 00_dev_settings.php  10_env_mw_install_path.php  10_set_wgEnableJavaScriptTest.php  10_set_wgWikimediaJenkinsCI.php  20_set_wgdjvu.php  50_mw_ext_loader.php  README  _join.php
tests/: test_backend.py  test_cmd.py  test_commands.py  test_mediawiki_maintenance.py  test_mediawiki_registry.py  test_plans.py  test_quibble.py  test_test_commands.py  test_util.py  test_zuul.py  util.py
tests/fixtures/: extension.json
tests/fixtures/phpdocroot/: env.php  index.php
tests/plans/: 001_default.yaml  002_extension.yaml  003_parsoid.yaml  004_db_external.yaml  005_phpunit_parallel.yaml  006_selenium_only.yaml  007_user_commands.yaml  008_shell.yaml  009_api_testing_only.yaml  010_phpunit_core.yaml  011_sqlite.yaml  012_postgres.yaml
tests/quibble/: test_cmd.py
utils/: ci-fullrun-extensions.sh  ci-fullrun.sh  ci-opensearch.sh
zuul/: README.md
zuul/lib/: clonemapper.py  cloner.py
zuul/merger/: merger.py
