[metadata]
name = quibble
maintainer = Wikimedia Release Engineering
maintainer_email = qa@lists.wikimedia.org
license = Apache License Version 2.0
license-file = LICENSE
summary = A test runner for MediaWiki
long-description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://doc.wikimedia.org/quibble/
project_urls =
  Bug tracker = https://phabricator.wikimedia.org/tag/quibble/
  Source code = https://gerrit.wikimedia.org/g/integration/quibble
  Git clone = https://gerrit.wikimedia.org/r/integration/quibble.git
# See https://pypi.org/classifiers/
classifier =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3 :: Only
  Topic :: Software Development :: Testing
  Topic :: Software Development :: Version Control :: Git
requires-dist = setuptools

[options]
packages = find:
setup_requires =
  setuptools_scm
install_requires =
  # For zuul-cloner
  extras
  six
  PyYAML
  # 2.1.2 has performances degradation
  # Solved in 2.1.8 but jessie-backports and stretch have 2.1.1
  #
  # zuul dcafeb6038b96a0095976963814cc29f98520995
  # https://github.com/gitpython-developers/GitPython/issues/605
  #
  # So we want either <2.1.2 or >2.1.7
  GitPython<2.2.0,!=2.1.2,!=2.1.3,!=2.1.4,!=2.1.5,!=2.1.6,!=2.1.7

[options.entry_points]
console_scripts =
  quibble = quibble.cmd:main

[options.package_data]
quibble.mediawiki = *.php

[check]
metadata = true
# Requires docutils
#restructuredtext = true
strict = true

[build_sphinx]
project = Quibble
build-dir = doc/build
