[metadata]
name = quibble
maintainer = Wikimedia Release Engineering
maintainer_email = qa@lists.wikimedia.org
license = Apache License Version 2.0
license_files = LICENSE.rst
summary = A test runner for MediaWiki
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://doc.wikimedia.org/quibble/
project_urls =
  Bug tracker = https://phabricator.wikimedia.org/tag/quibble/
  Source code = https://gerrit.wikimedia.org/g/integration/quibble
  Git clone = https://gerrit.wikimedia.org/r/integration/quibble.git
# See https://pypi.org/classifiers/
classifier =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Testing
  Topic :: Software Development :: Version Control :: Git
requires_dist = setuptools

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
  setuptools-git-versioning >= 1.8.0
install_requires =
  # For zuul-cloner
  extras
  six
  PyYAML
  GitPython ~= 3.1.0
  requests

[options.extras_require]
test =
  pytest
  coverage
doc =
  Sphinx>=1.4.9
  sphinx-argparse>=0.1.15

[options.entry_points]
console_scripts =
  quibble = quibble.cmd:main

[options.package_data]
quibble.mediawiki = local_settings.php.tpl

[check]
metadata = true
# Requires docutils
#restructuredtext = true
strict = true

[build_sphinx]
project = Quibble
build-dir = doc/build
warning-is-error = True
